--- a/Dev-Blog/Dev-Blog/Pages/Account/_Register.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/_Register.cshtml
@@ -3,6 +3,7 @@
 @inject SignInManager<Dev_Blog.Models.User> SignInManager
     <head>
         <link type="text/css" rel="stylesheet" href="~/css/All.css" />
+        <link type="text/css" rel="stylesheet" href="~/css/LoginRegister.css" />
     </head>
     <a data-toggle="modal" data-target="#registerModal" class="nav-link">Sign Up</a>
     <div class="modal fade" id="registerModal" role="dialog">
