--- a/Dev-Blog/Dev-Blog/wwwroot/css/All.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/All.css
@@ -78,10 +78,6 @@
         background-color: #626262;
     }
 
-    #bootstrap-override textarea {
-        color: black;
-    }
-
     #bootstrap-override .modal-content {
         background-color: #414141;
         color: #fffaf0;
@@ -90,4 +86,9 @@
     #bootstrap-override .modal-header,
     #bootstrap-override .modal-footer {
         border-color: #313131;
+    }
+
+    #bootstrap-override .modal-body input {
+        background-color: #313131;
+        border: none;
     }
