Style login / Register buttons.

--- a/Dev-Blog/Dev-Blog/wwwroot/css/LoginRegister.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/LoginRegister.css
@@ -1,3 +1,9 @@
-﻿#bootstrap-override .modal-body btn {
+﻿#bootstrap-override .modal-body .btn {
     background-color: #ca3e47;
+    color: #fffaf0;
 }
+
+    #bootstrap-override .modal-body .btn:hover {
+        background-color: #83272D;
+        color: #313131;
+    }
