--- a/Dev-Blog/Dev-Blog/Pages/Account/_Login.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/_Login.cshtml
@@ -17,7 +17,7 @@
             <div class="modal-body">
                 <form class="text-center p-5" method="post">
                     <h5>UserName</h5>
-                    <div asp-validation-summary="All" class="error-message"></div>
+                    <div asp-validation-summary="ModelOnly" class="error-message"></div>
                     <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="UserName" asp-for="@Model.UserName">
                     <h5>Password</h5>
                     <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password" asp-for="@Model.Password">
