--- a/Dev-Blog/Dev-Blog/Pages/Account/_Register.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/_Register.cshtml
@@ -16,13 +16,13 @@
             <div class="modal-body">
                 <form class="text-center p-5" method="post">
                     <h5>UserName</h5>
-                    <div asp-validation-summary="All" class="error-message"></div>
+                    <div asp-validation-summary="ModelOnly" class="error-message"></div>
                     <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="UserName" asp-for="@Model.UserName">
                     <h5>Email</h5>
                     <input type="email" class="form-control mb-4" placeholder="Email" asp-for="@Model.Email" />
                     <h5>Password</h5>
-                    <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password" asp-for="@Model.Password">
-                    <input type="password" class="form-control mb-4" placeholder="Confirm Password" asp-for="@Model.ConfirmPassword" />
+                    <input type="password" maxlength="35" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password" asp-for="@Model.Password">
+                    <input type="password" maxlength="35" class="form-control mb-4" placeholder="Confirm Password" asp-for="@Model.ConfirmPassword" />
                     <button class="btn btn-block my-4" type="submit" asp-page-handler="Register">Sign Up</button>
                 </form>
             </div>
