--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -168,7 +168,7 @@
                             renderComment(data[0], data[1], postId);
                         }
                     },
-                    error: function (hxr, status, error) {
+                    error: function () {
                         console.log("ERROR");
                     }
                 });
