--- a/Dev-Blog/Dev-Blog/Pages/Account/_Register.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/_Register.cshtml
@@ -16,7 +16,7 @@
             <div class="modal-body">
                 <form class="text-center p-5" method="post">
                     <h5>UserName</h5>
-                    <div asp-validation-summary="ModelOnly" class="error-message"></div>
+                    <div asp-validation-summary="All" class="error-message"></div>
                     <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="UserName" asp-for="@Model.UserName">
                     <h5>Email</h5>
                     <input type="email" class="form-control mb-4" placeholder="Email" asp-for="@Model.Email" />
@@ -32,3 +32,5 @@
         </div>
     </div>
 </div>
+<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
