--- a/Dev-Blog/Dev-Blog/Pages/Account/_Login.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/_Login.cshtml
@@ -4,6 +4,9 @@
 <head>
     <link type="text/css" rel="stylesheet" href="~/css/All.css" />
     <link type="text/css" rel="stylesheet" href="~/css/LoginRegister.css" />
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
 </head>
 
 <a data-toggle="modal" data-target="#loginModal" class="nav-link">Login</a>
@@ -17,7 +20,7 @@
             <div class="modal-body">
                 <form class="text-center p-5" method="post">
                     <h5>UserName</h5>
-                    <div asp-validation-summary="ModelOnly" class="error-message"></div>
+                    <div asp-validation-summary="All" class="error-message"></div>
                     <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="UserName" asp-for="@Model.UserName">
                     <h5>Password</h5>
                     <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password" asp-for="@Model.Password">
