--- a/Dev-Blog/Dev-Blog/Pages/Account/_Register.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/_Register.cshtml
@@ -4,6 +4,9 @@
 <head>
     <link type="text/css" rel="stylesheet" href="~/css/All.css" />
     <link type="text/css" rel="stylesheet" href="~/css/LoginRegister.css" />
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
 </head>
 <a data-toggle="modal" data-target="#registerModal" class="nav-link">Sign Up</a>
 <div class="modal fade" id="registerModal" role="dialog">
@@ -32,5 +35,3 @@
         </div>
     </div>
 </div>
-<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
