style registration errors.

--- a/Dev-Blog/Dev-Blog/wwwroot/css/LoginRegister.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/LoginRegister.css
@@ -10,6 +10,17 @@
         color: #313131;
     }
 
+/*Registration error*/
+#bootstrap-override .modal-body div {
+    color: #ca3e47;
+    font-weight: 800;
+    font-family: Courier New, Courier, monospace;
+    margin-bottom: 15px;
+}
+
+    #bootstrap-override .modal-body div ul {
+        list-style: none;
+    }
 /*Login Error Page*/
 #bootstrap-override #login-error {
     margin-top: 20%;
