--- a/Dev-Blog/Dev-Blog/Pages/Status/Edit.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Edit.cshtml
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="~/css/Posts.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/Edit.css" />
     <title>Status</title>
 </head>
 <body id="bootstrap-override">
