--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Updates";
     Layout = "_Layout";
 }
+
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -20,22 +21,48 @@
                 {
                     if (User.Identity.Name == Model.AdminUser)
                     {
+                        <!-- Add Post -->
                         <a edit id="add-post" class="btn btn-secondary" asp-page="Add">Add Post</a>
                     }
                 }
                 if (Model.Posts != null)
                 {
+                    <!-- Pagination -->
+                    <form method="post" class="text-center">
+
+                        @{
+                            <!-- Page Left -->
+                            if (Model.PageNumber == 1)
+                            {
+                                <a pageLeft disable class="glyphicon glyphicon-chevron-left"></a>
+
+                            }
+                            else
+                            {
+                                <a page pageLeft asp-page="Posts" asp-page-handler="PageLeft" class="glyphicon glyphicon-chevron-left"></a>
+
+                            }
+                            <span page>@Model.PageNumber</span>
+
+                            <!-- Page Right -->
+                            if (Model.PageNumber == Model.LastPage)
+                            {
+                                <a pageRight disable class="glyphicon glyphicon-chevron-right"></a>
+                            }
+                            else
+                            {
+                                <a page pageRight asp-page="Posts" asp-page-handler="PageRight" class="glyphicon glyphicon-chevron-right"></a>
+                            }
+                        }
+                    </form>
+
                     <!-- All Posts -->
-                    string formId = "";
-                    string upVoteId = "";
-                    string downVoteId = "";
-                    string voteSystem = "";
                     foreach (var post in Model.Posts)
                     {
-                        formId = "form" + post.Id;
-                        upVoteId = "upVote" + post.Id;
-                        downVoteId = "downVote" + post.Id;
-                        voteSystem = "voteSystem" + post.Id;
+                        string formId = "form" + post.Id;
+                        string upVoteId = "upVote" + post.Id;
+                        string downVoteId = "downVote" + post.Id;
+                        string voteSystem = "voteSystem" + post.Id;
                         <div class="card">
                             <div class="card-header">
                                 <span>
@@ -71,12 +98,12 @@
                                     <form>
                                         <!-- UpVote -->
                                         <input hidden asp-for="@post.Id" value=@post.Id />
-                                        <button id=@upVoteId value=@post.Id class="upVoteHandler glyphicon glyphicon-thumbs-up"></button>
+                                        <button vote id=@upVoteId value=@post.Id class="upVoteHandler glyphicon glyphicon-thumbs-up"></button>
                                         <span up>@post.UpVotes</span>
 
                                         <!-- DownVote -->
                                         <input hidden asp-for="@post.Id" value=@post.Id />
-                                        <button id=@downVoteId value=@post.Id down class="downVoteHandler glyphicon glyphicon-thumbs-down"></button>
+                                        <button vote id=@downVoteId value=@post.Id down class="downVoteHandler glyphicon glyphicon-thumbs-down"></button>
                                         <span down>@post.DownVotes</span>
 
                                         @if (!User.Identity.IsAuthenticated)
@@ -226,7 +253,7 @@
                     }
                 })
                 e.preventDefault();
-            })
+            });
 
             // update the vote count
             var updateVotes = function (upVotes, downVotes, id) {
