Fix ajax request.

--- a/Dev-Blog/Dev-Blog/Pages/Account/RegistrationError.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/RegistrationError.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model Dev_Blog.Pages.Account.LoginErrorModel
+@model Dev_Blog.Pages.Account.RegistrationErrorModel
 @{
-    ViewData["Title"] = "Login Error";
+    ViewData["Title"] = "Registration Error";
     Layout = "_Layout";
 }
 
@@ -18,8 +18,8 @@
         <div id="login-register-error" class="container">
             <div class="card">
                 <div class="card-body text-center">
-                    <h3>Login Error</h3>
-                    <h4>UserName and Password do not match</h4>
+                    <h3>Registration Error</h3>
+                    <h4>UserName or email already exists</h4>
                 </div>
             </div>
         </div>
