--- a/Dev-Blog/Dev-Blog/Pages/Account/_Register.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/_Register.cshtml
@@ -20,13 +20,13 @@
                 <form class="text-center p-5" method="post">
                     <h5>UserName</h5>
                     <div asp-validation-summary="All" class="error-message"></div>
-                    <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="UserName" asp-for="@Model.UserName">
+                    <input id="userNameInput" type="text" maxlength="25" class="form-control mb-4" placeholder="UserName" asp-for="@Model.UserName">
                     <h5>Email</h5>
-                    <input type="email" class="form-control mb-4" placeholder="Email" asp-for="@Model.Email" />
+                    <input id="emailInput" type="email" class="form-control mb-4" placeholder="Email" asp-for="@Model.Email" />
                     <h5>Password</h5>
                     <input type="password" maxlength="35" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password" asp-for="@Model.Password">
                     <input type="password" maxlength="35" class="form-control mb-4" placeholder="Confirm Password" asp-for="@Model.ConfirmPassword" />
-                    <button class="btn btn-block my-4" type="submit" asp-page-handler="Register">Sign Up</button>
+                    <button register class="btn btn-block my-4" type="submit" asp-page-handler="Register">Sign Up</button>
                 </form>
             </div>
             <div class="modal-footer">
@@ -35,3 +35,30 @@
         </div>
     </div>
 </div>
+<script>
+        $(document).ready(function () {
+
+        $("button[register]").on("click", function (e) {
+
+            var username = $("#userNameInput").val();
+            console.log(username);
+
+            $.ajax({
+                contentType: "application/json; charset=utf-8",
+                type: "POST",
+                url: '@Url.Action("UserNameExists", "Validation")',
+                data: JSON.stringify(username),
+                dataType: "json",
+                async: true,
+                success: function (data) {
+                    console.log("Success");
+                    console.log(data);
+                },
+                error: function () {
+                    console.log("ERROR");
+                }
+            });
+            e.preventDefault();
+        });
+    });
+</script>
