Fix issue with null username.

--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity;
+@using System.Security.Claims;
 @inject SignInManager<Dev_Blog.Models.User> SignInManager
 @model Dev_Blog.Models.Base.BasePage
 
