Add CSS attack protection on comments.

--- a/Dev-Blog/Dev-Blog/Pages/Account/LoginError.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/LoginError.cshtml
@@ -15,7 +15,7 @@
 </head>
 <body id="bootstrap-override">
     <main>
-        <div id="login-register-error" class="container">
+        <div id="login-error" class="container">
             <div class="card">
                 <div class="card-body text-center">
                     <h3>Login Error</h3>
