Add ability to update the update number.

--- a/Dev-Blog/Dev-Blog/wwwroot/css/Edit.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/Edit.css
@@ -1,5 +1,10 @@
-﻿#bootstrap-override textarea {
+﻿#bootstrap-override input,
+#bootstrap-override textarea {
     color: #fffaf0;
     background-color: #313131;
     border: none;
+}
+
+button[editBtn] {
+    margin-top: 15px;
 }
