--- a/Dev-Blog/Dev-Blog/Pages/Status/Edit.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Edit.cshtml
@@ -29,13 +29,13 @@
                     <div class="card-body">
                         <img class="update-img" src=@Model.Post.ImgURL />
                         <p>@Model.Post.Description</p>
-                        <textarea asp-for="@Model.Description" placeholder="New description here"></textarea>
+                        <textarea asp-for="@Model.Description" placeholder="New description here.."></textarea>
+                        <input type="text" asp-for=@Model.UpdateNum placeholder="Update number here..">
 
                         <input hidden asp-for=@Model.Post.Id>
                         <input hidden type="datetime" asp-for=@Model.Post.Date>
                         <input hidden type="text" asp-for=@Model.Post.ImgURL>
-                        <input hidden type="text" asp-for=@Model.Post.UpdateNum>
-                        <button class="btn btn-primary" type="submit" style="display: block">Update</button>
+                        <button editBtn class="btn btn-primary" type="submit" style="display: block">Update</button>
                     </div>
                 </div>
             </div>
