--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
@@ -2,7 +2,6 @@
 @using System.Security.Claims;
 @inject SignInManager<Dev_Blog.Models.User> SignInManager
 @model Dev_Blog.Models.Base.BasePage
-
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <img src="~/Imgs/Logo.png" height="115" width="100" />
@@ -12,26 +11,24 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
+            <ul navUL class="navbar-nav mr-auto">
+                <li leftLi class="nav-item">
                     <a class="nav-link" asp-page="/Index">Home</a>
                 </li>
-                <li class="nav-item">
+                <li leftLi class="nav-item">
                     <a class="nav-link" asp-page="/Status/Posts">Status</a>
                 </li>
-                <li class="nav-item">
+                <li leftLi class="nav-item">
                     <a class="nav-link" asp-page="/Bio/Bio">Creator</a>
                 </li>
-            </ul>
-            <div class="collapse navbar-collapse justify-content-end float-right">
-                <ul class="navbar-nav">
+                <div navDiv>
                     @{
                         if (User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item" id="welcome-user">
+                            <li rightLi class="nav-item" id="welcome-user">
                                 <a class="nav-link disabled">Welcome @User.Claims.First(x => x.Type == "UserName").Value </a>
                             </li>
-                            <li class="nav-item">
+                            <li rightLi class="nav-item">
                                 <a class="nav-link">
                                     <form asp-page="/Account/Logout" method="post">
                                         <button id="logout-button" type="submit">Logout</button>
@@ -41,16 +38,16 @@
                         }
                         else
                         {
-                            <li class="nav-item">
+                            <li rightLi class="nav-item">
                                 @{ await Html.RenderPartialAsync("../Account/_Login", Model.Input);}
                             </li>
-                            <li class="nav-item">
+                            <li rightLi class="nav-item">
                                 @{ await Html.RenderPartialAsync("../Account/_Register", Model.Input);}
                             </li>
                         }
                     }
-                </ul>
-            </div>
+                </div>
+            </ul>
         </div>
     </nav>
 </header>
