--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Layout.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Layout.cshtml
@@ -14,5 +14,6 @@
 <body>
     @{ await Html.RenderPartialAsync("_Header");}
     @RenderBody()
+    @{ await Html.RenderPartialAsync("_Footer");}
 </body>
 </html>
