Style suggestion box.

--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -39,7 +39,7 @@
                     </div>
 
                     <!--Suggestion Box-->
-                    <div class="card-footer text-center">
+                    <div suggestion class="card-footer text-center">
                         <a href="mailto:devmaster@thedevblog.net?subject=Suggestion">
                             <button class="btn btn-secondary">
                                 <h4>Have a suggestion? Send an email!</h4>
