Add Delete account functionality (attempt).

--- a/Dev-Blog/Dev-Blog/Pages/Account/_Register.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/_Register.cshtml
@@ -3,7 +3,7 @@
 @inject SignInManager<Dev_Blog.Models.User> SignInManager
 <head>
     <link type="text/css" rel="stylesheet" href="~/css/All.css" />
-    <link type="text/css" rel="stylesheet" href="~/css/LoginRegister.css" />
+    <link type="text/css" rel="stylesheet" href="~/css/Modals.css" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation/dist/additional-methods.min.js"></script>
