--- a/Dev-Blog/Dev-Blog/Pages/Account/_Delete.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/_Delete.cshtml
@@ -1,8 +1,7 @@
-﻿@model Dev_Blog.Models.ViewModels.AccountVM
-@using Microsoft.AspNetCore.Identity;
+﻿@using Microsoft.AspNetCore.Identity;
 @inject SignInManager<Dev_Blog.Models.User> SignInManager
 <head>
-    <link type="text/css" rel="stylesheet" href="~/css/All.css" />
+    <link type="text/css" rel="stylesheet" href="~/css/Footer.css" />
     <link type="text/css" rel="stylesheet" href="~/css/Modals.css" />
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
@@ -20,11 +19,7 @@
             <div class="modal-body">
                 <form class="text-center p-5" method="post">
                     <h5>UserName</h5>
-                    <div asp-validation-summary="All" class="error-message"></div>
-                    <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="UserName" asp-for="@Model.UserName">
-                    <h5>Password</h5>
-                    <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password" asp-for="@Model.Password">
-                    <button class="btn btn-block my-4" type="submit" asp-page-handler="Login">Sign in</button>
+                    <button class="btn btn-block my-4" type="submit">Sign in</button>
                 </form>
             </div>
             <div class="modal-footer">
