--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Footer.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Footer.cshtml
@@ -1,5 +1,36 @@
-﻿<footer id="main-footer" main class="py-4">
-    <div class="text-center py-3">
+﻿<link type="text/css" rel="stylesheet" href="~/css/Footer.css" />
+<link type="text/css" rel="stylesheet" href="~/css/Modals.css" />
+
+<footer id="main-footer" main class="py-4">
+    @{
+        if (User.Identity.IsAuthenticated)
+        {
+            <li class="nav-item">
+
+                <a data-toggle="modal" data-target="#deleteModal" class="nav-link">Delete Account</a>
+                <div deleteModal class="modal fade" id="deleteModal" role="dialog">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Are you sure?</h4>
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            </div>
+                            <div class="modal-body">
+                                <form class="text-center p-5" method="post">
+                                    <button class="btn btn-block my-4" type="submit">Delete Account</button>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </li>
+        }
+    }
+
+    <div class="py-3">
         © 2020 Copyright: TheDevBlog
     </div>
 </footer>
