--- a/Dev-Blog/Dev-Blog/wwwroot/css/Modals.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/Modals.css
@@ -1,5 +1,12 @@
 ﻿@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+/*
+    Styling for all modals: Register modal, login modal and account deletion modal
+*/
+
+#bootstrap-override .modal-header {
+}
+
 #bootstrap-override .modal-body .btn {
     background-color: #ca3e47;
     color: #fffaf0;
@@ -28,8 +35,7 @@
         list-style: none;
     }
 
-/*Login Error Page*/
-#bootstrap-override #login-error {
-    margin-top: 20%;
+/*Account Deletion Modal*/
+div[deleteModal] {
     font-family: 'Press Start 2P', cursive;
 }
