--- a/Dev-Blog/Dev-Blog/Pages/Account/LoginError.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/LoginError.cshtml
@@ -6,10 +6,7 @@
 }
 
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="~/css/LoginRegister.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/Modals.css" />
     <title>Status</title>
 </head>
 <body id="bootstrap-override">
