--- a/Dev-Blog/Dev-Blog/Pages/Account/_Delete.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Account/_Delete.cshtml
@@ -1,25 +1,14 @@
-﻿@using Microsoft.AspNetCore.Identity;
-@inject SignInManager<Dev_Blog.Models.User> SignInManager
-<head>
-    <link type="text/css" rel="stylesheet" href="~/css/Footer.css" />
-    <link type="text/css" rel="stylesheet" href="~/css/Modals.css" />
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-</head>
-
-<a data-toggle="modal" data-target="#loginModal" class="nav-link">Login</a>
-<div class="modal fade" id="loginModal" role="dialog">
+﻿<a data-toggle="modal" data-target="#deleteModal" class="nav-link">Delete Account</a>
+<div deleteModal class="modal fade" id="deleteModal" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Login</h4>
+                <h4 class="modal-title">Are you sure?</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
                 <form class="text-center p-5" method="post">
-                    <h5>UserName</h5>
-                    <button class="btn btn-block my-4" type="submit">Sign in</button>
+                    <button class="btn btn-block my-4" type="submit" asp-page-handler="DeleteAccount">Delete Account</button>
                 </form>
             </div>
             <div class="modal-footer">
