--- a/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Shared/_Header.cshtml
@@ -2,6 +2,8 @@
 @using System.Security.Claims;
 @inject SignInManager<Dev_Blog.Models.User> SignInManager
 @model Dev_Blog.Models.Base.BasePage
+<link type="text/css" rel="stylesheet" href="~/css/Header.css" />
+<link type="text/css" rel="stylesheet" href="~/css/Modals.css" />
 <header>
     <nav class="navbar navbar-expand-xl navbar-dark">
         <img src="~/Imgs/Logo.png" height="115" width="100" />
@@ -24,25 +26,25 @@
                 @{
                     if (User.Identity.IsAuthenticated)
                     {
-                        <li rightLi class="nav-item" id="welcome-user">
-                            <a class="nav-link disabled">Welcome @User.Claims.First(x => x.Type == "UserName").Value </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link">
-                                <form asp-page="/Account/Logout" method="post">
-                                    <button id="logout-button" type="submit">Logout</button>
-                                </form>
-                            </a>
-                        </li>
+                    <li rightLi class="nav-item" id="welcome-user">
+                        <a class="nav-link disabled">Welcome @User.Claims.First(x => x.Type == "UserName").Value </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">
+                            <form asp-page="/Account/Logout" method="post">
+                                <button id="logout-button" type="submit">Logout</button>
+                            </form>
+                        </a>
+                    </li>
                     }
                     else
                     {
-                        <li rightLi class="nav-item">
-                            @{ await Html.RenderPartialAsync("../Account/_Login", Model.Input);}
-                        </li>
-                        <li class="nav-item">
-                            @{ await Html.RenderPartialAsync("../Account/_Register", Model.Input);}
-                        </li>
+                    <li rightLi class="nav-item">
+                        @{ await Html.RenderPartialAsync("../Account/_Login", Model.Input);}
+                    </li>
+                    <li class="nav-item">
+                        @{ await Html.RenderPartialAsync("../Account/_Register", Model.Input);}
+                    </li>
                     }
                 }
             </ul>
