--- a/Dev-Blog/Dev-Blog/wwwroot/css/Footer.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/Footer.css
@@ -4,24 +4,28 @@
     width: 100%;
     color: #BEB8AB;
     background-color: #414141;
+    text-align: center;
 }
 
 #main-footer > div,
-#main-footer > li,
 #main-footer > a {
     display: inline-block;
-    border: 1px solid yellow;
 }
 
-#main-footer a {
-    font-family: 'Press Start 2P', cursive;
+#main-footer div[deleteAccount]:hover {
+    cursor: pointer;
+    border: 1px solid #ca3e47;
+    border-radius: 5px;
+    -webkit-transition: border 150ms ease-out;
+    -moz-transition: border 150ms ease-out;
+    -o-transition: border 150ms ease-out;
 }
 
-    #main-footer a:hover {
-        color: #B0ACA4;
-        cursor: pointer;
-    }
-
-#main-footer > li {
-    list-style-type: none;
+#main-footer div[deleteAccount] {
+    margin: 5px 0px 0px 10px;
+    float: left;
+    background-color: #313131;
+    color: #ca3e47;
+    border: 1px solid #313131;
+    border-radius: 5px;
 }
