Fix suggestion box scaling issues.

--- a/Dev-Blog/Dev-Blog/wwwroot/css/All.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/All.css
@@ -15,10 +15,18 @@
     border-radius: 5px;
 }
 
-@media screen and (max-width: 975px) {
+@media screen and (max-width: 992px) {
     #bootstrap-override .update-img {
         height: 360px;
         width: 640px;
+    }
+
+    #bootstrap-override div[suggestion] h4 {
+        font-size: .73em;
+    }
+
+    #bootstrap-override div[suggestion] button {
+        width: 100%;
     }
 
     #bootstrap-override .post-description {
@@ -38,6 +46,10 @@
 }
 
 @media screen and (max-width: 525px) {
+    #bootstrap-override div[suggestion] h4 {
+        font-size: .58em;
+    }
+
     #bootstrap-override .update-img {
         height: 234px;
         width: 416px;
