--- a/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Status/Posts.cshtml
@@ -8,6 +8,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="~/css/Posts.css" />
     <title>Status</title>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
 </head>
 <body id="bootstrap-override">
     <main>
@@ -17,117 +18,117 @@
                 {
                     if (User.Identity.Name == Model.AdminUser)
                     {
- <!-- Add Post -->
-                <a edit id="add-post" class="btn btn-secondary" asp-page="Add">Add Post</a>
+                        <!-- Add Post -->
+                        <a edit id="add-post" class="btn btn-secondary" asp-page="Add">Add Post</a>
                     }
                 }
                 if (Model.Posts != null)
                 {
- <!-- Pagination -->
+                    <!-- Pagination -->
                     await Html.RenderPartialAsync("_Pages", Model);
 
- <!-- All Posts -->
+                    <!-- All Posts -->
                     foreach (var post in Model.Posts)
                     {
                         string formId = "form" + post.Id;
                         string upVoteId = "upVote" + post.Id;
                         string downVoteId = "downVote" + post.Id;
                         string voteSystem = "voteSystem" + post.Id;
-                <div class="card">
-                    <div class="card-header">
-                        <span>
-                            Update
-                            <strong>@post.UpdateNum</strong>
-                        </span>
-                        <div class="float-right">
-                            <strong>@post.Date.ToShortDateString()</strong>
+                        <div class="card">
+                            <div class="card-header">
+                                <span>
+                                    Update
+                                    <strong>@post.UpdateNum</strong>
+                                </span>
+                                <div class="float-right">
+                                    <strong>@post.Date.ToShortDateString()</strong>
 
-                            <!-- Delete/Edit post form -->
-                            @if (User.Identity.Name == Model.AdminUser)
+                                    <!-- Delete/Edit post form -->
+                                    @if (User.Identity.Name == Model.AdminUser)
                                     {
-                            <form method="post" class="delete-form">
-                                <input hidden asp-for=@post.Id>
-                                <button asp-page-handler="DeletePost" type="submit">
-                                    @{ await Html.RenderPartialAsync("../Icons/_TrashIcon");}
-                                </button>
-                                <a edit class="nav-link" asp-route-id=@post.Id asp-page="Edit">
-                                    @{ await Html.RenderPartialAsync("../Icons/_EditIcon");}
-                                </a>
-                            </form>
+                                        <form method="post" class="delete-form">
+                                            <input hidden asp-for=@post.Id>
+                                            <button asp-page-handler="DeletePost" type="submit">
+                                                @{ await Html.RenderPartialAsync("../Icons/_TrashIcon");}
+                                            </button>
+                                            <a edit class="nav-link" asp-route-id=@post.Id asp-page="Edit">
+                                                @{ await Html.RenderPartialAsync("../Icons/_EditIcon");}
+                                            </a>
+                                        </form>
                                     }
-                        </div>
-                    </div>
+                                </div>
+                            </div>
 
-                    <!-- Post Information -->
-                    <div class="card-body text-center">
-                        <img class="update-img" src=@post.ImgURL />
-                        <p class="post-description">@post.Description</p>
+                            <!-- Post Information -->
+                            <div class="card-body text-center">
+                                <img class="update-img" src=@post.ImgURL />
+                                <p class="post-description">@post.Description</p>
 
-                        <!-- Voting System -->
-                        <div id=@voteSystem class="voting-system text-left">
-                            <form>
-                                <!-- UpVote -->
-                                <input hidden asp-for="@post.Id" value=@post.Id />
-                                <button vote id=@upVoteId value=@post.Id class="upVoteHandler glyphicon glyphicon-thumbs-up"></button>
-                                <span up>@post.UpVotes</span>
+                                <!-- Voting System -->
+                                <div id=@voteSystem class="voting-system text-left">
+                                    <form>
+                                        <!-- UpVote -->
+                                        <input hidden asp-for="@post.Id" value=@post.Id />
+                                        <button vote id=@upVoteId value=@post.Id class="upVoteHandler glyphicon glyphicon-thumbs-up"></button>
+                                        <span up>@post.UpVotes</span>
 
-                                <!-- DownVote -->
-                                <input hidden asp-for="@post.Id" value=@post.Id />
-                                <button vote id=@downVoteId value=@post.Id down class="downVoteHandler glyphicon glyphicon-thumbs-down"></button>
-                                <span down>@post.DownVotes</span>
+                                        <!-- DownVote -->
+                                        <input hidden asp-for="@post.Id" value=@post.Id />
+                                        <button vote id=@downVoteId value=@post.Id down class="downVoteHandler glyphicon glyphicon-thumbs-down"></button>
+                                        <span down>@post.DownVotes</span>
 
-                                @if (!User.Identity.IsAuthenticated)
+                                        @if (!User.Identity.IsAuthenticated)
                                         {
-                                <span class="login-to-vote">Sign in to like/dislike</span>
+                                            <span class="login-to-vote">Sign in to like/dislike</span>
                                         }
-                            </form>
-                        </div>
-                    </div>
+                                    </form>
+                                </div>
+                            </div>
 
-                    @if (post.Comments != null)
+                            @if (post.Comments != null)
                             {
                                 foreach (var comment in post.Comments)
                                 {
                                     <!-- Comment -->
-                    <div comment class="posted-comments comment-box">
-                        <span class="glyphicon glyphicon-user user-icon"></span>
-                        <span class="comment-username">@comment.UserName</span>
-                        <div class="float-right">
-                            <span>@comment.Date.ToString("MM/dd/yyyy hh:mm tt")</span>
+                                    <div comment class="posted-comments comment-box">
+                                        <span class="glyphicon glyphicon-user user-icon"></span>
+                                        <span class="comment-username">@comment.UserName</span>
+                                        <div class="float-right">
+                                            <span>@comment.Date.ToString("MM/dd/yyyy hh:mm tt")</span>
 
-                            <!--Delete Comment Button-->
-                            <form method="post" class="delete-form">
-                                @if (User.Identity.Name == Model.AdminUser)
+                                            <!--Delete Comment Button-->
+                                            <form method="post" class="delete-form">
+                                                @if (User.Identity.Name == Model.AdminUser)
                                                 {
-                                <input hidden asp-for=@comment.Id>
-                                <button type="submit" asp-page-handler="DeleteComment">
-                                    @{ await Html.RenderPartialAsync("../Icons/_TrashIcon");}
-                                </button>
+                                                    <input hidden asp-for=@comment.Id>
+                                                    <button type="submit" asp-page-handler="DeleteComment">
+                                                        @{ await Html.RenderPartialAsync("../Icons/_TrashIcon");}
+                                                    </button>
                                                 }
-                            </form>
-                        </div>
-                        <p>@comment.Content</p>
-                    </div>
+                                            </form>
+                                        </div>
+                                        <p>@comment.Content</p>
+                                    </div>
                                 }
                             }
-                    <!-- Comment Box -->
-                    <div id=@formId class="comment-box form-group">
-                        @if (User.Identity.IsAuthenticated)
+                            <!-- Comment Box -->
+                            <div id=@formId class="comment-box form-group">
+                                @if (User.Identity.IsAuthenticated)
                                 {
-                        <form>
-                            <textarea maxlength="750" asp-for=@Model.Comment.Content class="form-control" placeholder="comment.." rows="2"></textarea>
-                            <input hidden asp-for="@post.Id" value=@post.Id />
-                            <button class="commentBtn btn btn-secondary" value=@post.Id>Comment</button>
-                        </form>
+                                    <form>
+                                        <textarea maxlength="750" asp-for=@Model.Comment.Content class="form-control" placeholder="comment.." rows="2"></textarea>
+                                        <input hidden asp-for="@post.Id" value=@post.Id />
+                                        <button class="commentBtn btn btn-secondary" value=@post.Id>Comment</button>
+                                    </form>
                                 }
                                 else
                                 {
-                        <textarea class="form-control" placeholder="Login in to leave a comment.."></textarea>
+                                    <textarea class="form-control" placeholder="Login in to leave a comment.."></textarea>
                                 }
-                    </div>
-                </div>
+                            </div>
+                        </div>
                     }
- <!-- Pagination -->
+                    <!-- Pagination -->
                     await Html.RenderPartialAsync("_Pages", Model);
                 }
             }
