Change name of bio page to about page.

--- a/Dev-Blog/Dev-Blog/Pages/About/About.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/About/About.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Dev_Blog.Pages.Bio.BioModel
+@model Dev_Blog.Pages.About.AboutModel
 @{
     Layout = "_Layout";
 }
@@ -7,7 +7,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="~/css/Bio.css" />
 
-    <title>Bio</title>
+    <title>About</title>
 </head>
 <body id="bootstrap-override">
     <main>
