Fix about page scaling issues.

--- a/Dev-Blog/Dev-Blog/Pages/Index.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Dev_Blog.Pages.IndexModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Home";
     Layout = "_Layout";
 }
 
@@ -14,38 +14,44 @@
     <main>
         @if (Model.Post != null)
         {
-        <div class="container">
-            <div class="card">
+            <div class="container">
+                <div class="card">
 
-                <!-- Latest Post -->
-                <div class="card-header">
-                    <span>
-                        Update
-                        <strong>@Model.Post.UpdateNum</strong>
-                    </span>
-                    <strong class="float-right">@Model.Post.Date.ToShortDateString()</strong>
-                </div>
-                <div class="card-body text-center">
-                    <img id="update-img" class="update-img" src=@Model.Post.ImgURL />
-                    <p class="post-description">@Model.Post.Description</p>
+                    <!-- Latest Post -->
+                    <div class="card-header">
+                        <span>
+                            Update
+                            <strong>@Model.Post.UpdateNum</strong>
+                        </span>
+                        <strong class="float-right">@Model.Post.Date.ToShortDateString()</strong>
+                    </div>
+                    <div class="card-body text-center">
+                        <img id="update-img" class="update-img" src=@Model.Post.ImgURL />
+                        <p class="post-description">@Model.Post.Description</p>
 
-                    <hr />
+                        <hr />
 
-                    <div class="m-auto embed-responsive-16by9 embed-responsive">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9ou1pl0XNRs"></iframe>
+                        <div youtube class="m-auto embed-responsive-16by9 embed-responsive">
+                            @*<iframe class="embed-responsive-item" src="#"></iframe>*@
+                            <img class="embed-responsive-item" />
+                            <h2>
+                                YouTube Channel
+                                <br /><br />
+                                Coming Soon
+                            </h2>
+                        </div>
+                    </div>
+
+                    <!--Suggestion Box-->
+                    <div suggestion class="card-footer text-center">
+                        <a href="mailto:devmaster@thedevblog.net?subject=Suggestion">
+                            <button class="btn btn-secondary">
+                                <h4>Have a suggestion? Send an email!</h4>
+                            </button>
+                        </a>
                     </div>
                 </div>
-
-                <!--Suggestion Box-->
-                <div suggestion class="card-footer text-center">
-                    <a href="mailto:devmaster@thedevblog.net?subject=Suggestion">
-                        <button class="btn btn-secondary">
-                            <h4>Have a suggestion? Send an email!</h4>
-                        </button>
-                    </a>
-                </div>
             </div>
-        </div>
         }
     </main>
 </body>
