--- a/Dev-Blog/Dev-Blog/Pages/About/About.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/About/About.cshtml
@@ -5,19 +5,28 @@
 }
 
 <head>
-    <link rel="stylesheet" type="text/css" href="~/css/Bio.css" />
-
+    <link rel="stylesheet" type="text/css" href="~/css/About.css" />
     <title>About</title>
 </head>
 <body id="bootstrap-override">
     <main>
         <div class="container">
             <div class="card">
-                <div class="card-header text-center">
+
+                <!-- About the game -->
+                <div class="card-header text-left">
+                    <h3>About the Game</h3>
+                </div>
+                <div gameDescription class="card-body text-center">
+                    <p>Coming Soon...</p>
+                </div>
+
+                <!-- About the creator -->
+                <div class="card-header text-left">
                     <h3>About the Creator</h3>
                 </div>
-                <div class="card-body text-center">
-                    <p class="d-inline-flex">This is a very long description about myself.</p>
+                <div creatorDescription class="card-body">
+                    <p>This is a very long description about myself.kljasf klasjf kalsdjflkje kdajsf jkjasd kjfeij jkjd kjd ks askdfj kjkjd kjllkf kdj askdjf jkjd jljf jdks klkj ljfj jdkkd jj jdksf lalsdfj jdj jkkj jd</p>
                     <img src="~/Imgs/Me.jpg" height="400" width="400" />
                 </div>
             </div>
